--- a/add-items-react/src/index.css
+++ b/add-items-react/src/index.css
@@ -14,15 +14,6 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -34,9 +25,21 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  max-width: 70%;
+  margin-bottom: 5px;
+  margin-top: 0;
 }
 
-button {
+p {
+  margin: 0 0 30px;
+}
+
+ul li {
+  cursor: pointer;
+}
+
+button,
+input {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -47,6 +50,15 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
+input {
+  cursor: text;
+  background-color: #ffffff;
+  border: 1px solid #dedede;
+  display: block;
+  margin-bottom: 30px;
+}
+
 button:hover {
   border-color: #646cff;
 }
@@ -64,6 +76,18 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #213547;
+    width: 70%;
+    color: #ffffff;
+  }
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 2.5rem;
+    max-width: 90%;
+  }
+  button {
+    width: 100%;
   }
 }
