--- a/random-users/src/App.css
+++ b/random-users/src/App.css
@@ -1,42 +1,33 @@
 #root {
-  max-width: 1280px;
+  width: 90%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+table {
+  width: 100%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+table tbody tr td:first-child {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.filters {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  max-width: 700px;
+  margin: 0 auto 30px;
+  flex-wrap: wrap;
 }
 
-.card {
-  padding: 2em;
+.table-odd-even tbody tr:nth-child(even) {
+  background-color: darkgray;
 }
 
-.read-the-docs {
-  color: #888;
+.table-odd-even tbody tr:nth-child(odd) {
+  background-color: rgb(235, 235, 235);
 }
