añadiendo filtrado por Nombre y Apellido

--- a/random-users/src/App.css
+++ b/random-users/src/App.css
@@ -9,6 +9,10 @@ table {
   width: 100%;
 }
 
+table thead th:not(:last-child):not(:first-child) {
+  cursor: pointer;
+}
+
 table tbody tr td:first-child {
   display: flex;
   justify-content: center;
