--- a/javascript-quiz/src/App.css
+++ b/javascript-quiz/src/App.css
@@ -1,4 +1,7 @@
 #root {
   margin: 0 auto;
-  padding-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 }
