--- a/search-movies/src/index.css
+++ b/search-movies/src/index.css
@@ -1,6 +1,5 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -28,7 +27,8 @@ body {
   min-height: 100vh;
 }
 
-button {
+button,
+form input {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -45,6 +45,20 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 40px;
+}
+
+form input {
+  background-color: white;
+  border: 1px solid #dedede;
+  cursor: text;
 }
 
 @media (prefers-color-scheme: light) {
