--- a/search-movies/src/index.css
+++ b/search-movies/src/index.css
@@ -55,7 +55,7 @@ form {
   margin-bottom: 40px;
 }
 
-form input {
+form input[type='text'] {
   background-color: white;
   border: 1px solid #dedede;
   cursor: text;
